--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,8 @@
     "jquery": "~2.1.4",
     "loader.js": "ember-cli/loader.js#~3.4.0",
     "qunit": "~1.18.0"
+  },
+  "devDependencies": {
+    "google-maps": "~3.1.0"
   }
 }
