--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-dp-map",
   "version": "0.0.1",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Google maps component for ember.",
   "directories": {
     "doc": "doc",
     "test": "tests"
